Ensure videos stretch full width of project body when smaller

--- a/components/body.module.scss
+++ b/components/body.module.scss
@@ -90,6 +90,10 @@ $element_margin: 1.5rem;
   top: 0;
 }
 
+.video {
+  width: 100%;
+}
+
 $column_width: "((100vw - (11 * .5rem)) / 12)";
 $grid_gap: ".5rem";
 
